Fix grid alignment

--- a/src/components/Product/style.css
+++ b/src/components/Product/style.css
@@ -3,7 +3,7 @@
 }
 
 .grid > .product-list {
-	justify-content: space-between;
+	justify-content: center;
 }
 
 .product-info > h4 {
@@ -42,6 +42,7 @@
 @media (max-width: 600px) {
   .grid > .product-list > a > .product-card {
     flex: 1 46%;
+		margin-bottom: 1.5em
   }
 }
 
